--- a/public/recibo.html
+++ b/public/recibo.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Recibo de Venda - Estoque Pro</title>
+    <title>Recibo de Venda - Mega-Xerox</title>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/1.4.1/html2canvas.min.js"></script>
     <link rel="stylesheet" href="recibo.css">
 </head>
@@ -12,7 +12,7 @@
 <div class="main-container">
     <div class="container" id="capture">
         <div class="header">
-            <div class="logo">Estoque Pro<br><span id="header-contato"></span></div>
+            <div class="logo">Mega-Xerox<br><span id="header-contato"></span></div>
             <div class="header-text">
                 <p id="header-endereco"></p>
                 <p id="header-cnpj"></p>
